fixed text-align on about page

--- a/css/others.scss
+++ b/css/others.scss
@@ -1519,6 +1519,7 @@ p.section_news {
 		margin: 0 auto;
 
 		p {
+			text-align: justify;
 			max-width: 700px;
 		}
 
